tagging validation error

--- a/views/index.html
+++ b/views/index.html
@@ -4,6 +4,9 @@
   <h3>Pages</h3>
   <hr>
   <ul class="list-unstyled">
+  {% for page in pages %}
     <!-- PLACEHOLDER LIST OF PAGES -->
+    <li><a href="{{ page.route }}">{{ page.title }}</a></li>
+  {% endfor %}
   </ul>
 {% endblock %}
