--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,4 +1,5 @@
 body {
+  top: 50px;
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
@@ -6,3 +7,9 @@ body {
 a {
   color: #00B7FF;
 }
+
+container {
+  top: 50px;
+}
+
+
