--- a/views/addpage.html
+++ b/views/addpage.html
@@ -7,41 +7,43 @@
 
     <div class="form-group">
       <label for="name" class="col-sm-2 control-label">Author Name</label>
-      <div class="col-sm-10">
+      <div>
         <input name="name" type="text" class="form-control"/>
       </div>
     </div>
-
     <div class="form-group">
       <label for="email" class="col-sm-2 control-label">Author Email</label>
-      <div class="col-sm-10">
+      <div>
         <input name="email" type="text" class="form-control"/>
       </div>
     </div>
-
     <div class="form-group">
       <label for="title" class="col-sm-2 control-label">Page Title</label>
-      <div class="col-sm-10">
+      <div>
         <input name="title" type="text" class="form-control"/>
       </div>
     </div>
-
     <div class="form-group">
       <label for="content" class="col-sm-2 control-label">Page Content Test Area</label>
-      <div class="col-sm-10">
-        <input name="content" type="text" class="form-control"/>
+      <div>
+        <textarea name="content" type="text" class="form-control"/></textarea>
       </div>
     </div>
-
     <div class="form-group">
-      <label for="status" class="col-sm-2 control-label">Page Status</label>
-      <div class="col-sm-10">
+      <label for="tags" class="col-sm-2 control-label">Tags</label>
+      <div>
+        <input name="tags" type="text" class="form-control"/>
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="status" class="col-sm-2 control-label">Status</label>
+      <div>
         <input name="status" type="text" class="form-control"/>
       </div>
     </div>
 
-    <div class="col-sm-offset-2 col-sm-10">
-      <button type="submit" class="btn btn-primary">submit</button>
+    <div class="pull-right">
+      <button type="submit" class="btn btn-xl btn-primary">submit</button>
     </div>
 
   </form>
