--- a/views/wikipage.html
+++ b/views/wikipage.html
@@ -1,13 +1,16 @@
 {% extends "layout.html" %}
 
 {% block content %}
-  <h3>PLACEHOLDER PAGE TITLE <small> (<a href="PLACEHOLDER_URL_TITLE/similar">Similar</a>)</small></h3>
-  <h4>by <a href="PLACEHOLDER-AUTHOR-URL">PLACEHOLDER AUTHOR NAME</a></h4>
-  <div>PLACEHOLDER TAG LIST</div>
+  <h3>{{ page.title }} <small> (<a href="{{ urlTitle }}">{{ page.title }}</a>)</small></h3>
+  <h4>by <a href="/users/{{ user.id }}">{{ user.name }}</a></h4>
+  <div>
+  <a href="PLACEHOLDER">{{ page.tags }}</a></li>
+  </ul>
+  </div>
   <hr/>
-  <div>PLACEHOLDER AUTHOR NAME WITH LINK TO AUTHOR PAGE</div>
-  <div class="page-body">PLACEHOLDER PAGE CONTENT</div>
+  <div><a href="/wiki/{{ page.urlTitle }}">{{ page.title }}</a></div>
+  <div class="page-body">{{ page.content }}</div>
   <hr/>
-  <a href="PLACEHOLDER_URL_TITLE/edit" class="btn btn-primary">edit this page</a>
-  <a href="PLACEHOLDER_URL_TITLE/delete" class="btn btn-danger">delete this page</a>
+  <a href="{{ page.urlTitle }}/edit" class="btn btn-primary">edit this page</a>
+  <a href="{{ page.urlTitle }}/delete" class="btn btn-danger">delete this page</a>
 {% endblock %}
